smtp entrees added for grafana module.

--- a/charts/jenkins/values.yaml
+++ b/charts/jenkins/values.yaml
@@ -133,6 +133,8 @@ Master:
   # List of plugins to be install during Jenkins master start
   InstallPlugins:
     - kubernetes:1.24.1
+    - git-parameter:0.9.12
+    - extended-choice-parameter:0.78
     - workflow-job:2.33
     - workflow-aggregator:2.6
     - credentials-binding:1.19
