name errors is edited

--- a/charts/nexus/templates/deployment.yaml
+++ b/charts/nexus/templates/deployment.yaml
@@ -63,6 +63,6 @@ spec:
         {{- toYaml . | nindent 8 }}
     {{- end }}
       volumes:
-      - name: nexus-pvc
+      - name: "nexus-pvc"
         persistentVolumeClaim:
           claimName: "nexus-pvc-new"
