restructured the folder

--- a/charts/nexus-docker/templates/ingress.yaml
+++ b/charts/nexus-docker/templates/ingress.yaml
@@ -10,7 +10,7 @@ kind: Ingress
 metadata:
   name: {{ $fullName }}
   labels:
-    {{- include "nexus.labels" . | nindent 4 }}
+{{ include "nexus.labels" . | indent 4 }}
   {{- with .Values.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
