--- a/charts/nexus-docker/templates/deployment.yaml
+++ b/charts/nexus-docker/templates/deployment.yaml
@@ -1,34 +1,36 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Values.deploymentName }}
+  name: {{ include "nexus.fullname" . }}
   labels:
-    {{- include "nexus.labels" . | nindent 4 }}
+{{ include "nexus.labels" . | indent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      {{- include "nexus.selectorLabels" . | nindent 6 }}
+      app.kubernetes.io/name: {{ include "nexus.name" . }}
+      app.kubernetes.io/instance: {{ .Release.Name }}
   template:
     metadata:
       labels:
-        {{- include "nexus.selectorLabels" . | nindent 8 }}
+        app.kubernetes.io/name: {{ include "nexus.name" . }}
+        app.kubernetes.io/instance: {{ .Release.Name }}
     spec:
     {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
     {{- end }}
-      serviceAccountName: {{ include "nexus.serviceAccountName" . }}
+      serviceAccountName: {{ template "nexus.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository }}:{{ .Chart.AppVersion }}"
+          image: "{{ .Values.image.repository }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
-            name: "INSTALL4J_ADD_VM_PARAMS"
+          - name: "INSTALL4J_ADD_VM_PARAMS"
             value: "-Xms1200M -Xmx1200M -XX:MaxDirectMemorySize=2G -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap"
           volumeMounts:
           - name: nexus-pvc
