--- a/new/values.yaml
+++ b/new/values.yaml
@@ -1,11 +1,12 @@
-# Default values for nexus.
+# Default values for new.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
 
 image:
-  repository: fsadykov/docker-nexus
+  repository: nginx
+  tag: stable
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
@@ -14,7 +15,7 @@ fullnameOverride: ""
 
 serviceAccount:
   # Specifies whether a service account should be created
-  create: false
+  create: true
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
   name:
@@ -32,38 +33,22 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  portdocker: ${repo_port}
-  targetportdocker: 8085
-  portnexus: ${nexus_port}
-  targetportnexus: 8081
+  port: 80
 
 ingress:
-  enabled: true
-  annotations: 
+  enabled: false
+  annotations: {}
     cert-manager.io/cluster-issuer: letsencrypt-prod
     kubernetes.io/ingress.class: nginx
   hosts:
-    - host: ${deployment_endpoint}
+    - host: chart-example.local
       paths:
-      - path: /
-        backend:
-          serviceName: nexus-service
-          servicePort: ${nexus_port}
-    # - host: ${deployment_endpoint}
-    #   paths:
-    #   - path: /
-    #     backend:
-    #       serviceName: nexus-service
-    #       servicePort: ${nexus_port}
-    #   - path: /v2/
-    #     backend:
-    #       serviceName: nexus-service
-    #       servicePort: ${repo_port}
-  tls: 
-   - secretName: tls-docker-nexus-cert
-     hosts:
-       - ${deployment_endpoint}
-      #  - ${docker_endpoint}
+      
+
+  tls: []
+  #  - secretName: chart-example-tls
+  #    hosts:
+  #      - chart-example.local
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
