pvc name changed

--- a/charts/nexus-docker/templates/deployment.yaml
+++ b/charts/nexus-docker/templates/deployment.yaml
@@ -67,4 +67,4 @@ spec:
       volumes:
       - name: "nexus-pvc"
         persistentVolumeClaim:
-          claimName: "nexus-pvc-new"
+          claimName: "nexus"
