--- a/charts/nexus-docker/templates/pvc.yaml
+++ b/charts/nexus-docker/templates/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: nexus-pvc-new
+  name: nexus
   labels:
     app: nexus-deployment
 spec:
