--- a/charts/nexus-docker/templates/deployment.yaml
+++ b/charts/nexus-docker/templates/deployment.yaml
@@ -42,14 +42,14 @@ spec:
             - name: nexus
               containerPort: {{ .Values.service.targetportnexus }}
               protocol: TCP
-          livenessProbe:
-            httpGet:
-              path: /
-              port: http
-          readinessProbe:
-            httpGet:
-              path: /
-              port: http
+          # livenessProbe:
+          #   httpGet:
+          #     path: /
+          #     port: http
+          # readinessProbe:
+          #   httpGet:
+          #     path: /
+          #     port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
