--- a/charts/nexus-docker/values.yaml
+++ b/charts/nexus-docker/values.yaml
@@ -38,7 +38,7 @@ service:
   targetportnexus: 8081
 
 ingress:
-  enabled: false
+  enabled: true
   annotations: 
     cert-manager.io/cluster-issuer: letsencrypt-prod
     kubernetes.io/ingress.class: nginx
