--- a/charts/nexus-docker/values.yaml
+++ b/charts/nexus-docker/values.yaml
@@ -39,31 +39,24 @@ service:
 
 ingress:
   enabled: true
-  annotations: 
-    cert-manager.io/cluster-issuer: letsencrypt-prod
+  annotations:
     kubernetes.io/ingress.class: nginx
+    cert-manager.io/cluster-issuer: letsencrypt-prod
+    # kubernetes.io/tls-acme: "true"
+  # labels: {}
+  # path: /
   hosts:
-    - host: ${deployment_endpoint}
-      paths:
-      - path: /
-        backend:
-          serviceName: nexus-service
-          servicePort: ${nexus_port}
-    # - host: ${deployment_endpoint}
-    #   paths:
-    #   - path: /
-    #     backend:
-    #       serviceName: nexus-service
-    #       servicePort: ${nexus_port}
-    #   - path: /v2/
-    #     backend:
-    #       serviceName: nexus-service
-    #       servicePort: ${repo_port}
-  tls: 
-   - secretName: tls-docker-nexus-cert
+  - ${deployment_endpoint}
+  ## Extra paths to prepend to every host configuration. This is useful when working with annotation based services.
+  extraPaths: []
+  # - path: /*
+  #   backend:
+  #     serviceName: ssl-redirect
+  #     servicePort: use-annotation
+  tls:
+   - secretName: nexus-tls
      hosts:
-       - ${deployment_endpoint}
-      #  - ${docker_endpoint}
+     - ${deployment_endpoint}
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
