--- a/charts/nexus-old/templates/deployment.yaml
+++ b/charts/nexus-old/templates/deployment.yaml
@@ -1,46 +1,55 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "new.fullname" . }}
+  name: {{ include "nexus.fullname" . }}
   labels:
-{{ include "new.labels" . | indent 4 }}
+{{ include "nexus.labels" . | indent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app.kubernetes.io/name: {{ include "new.name" . }}
+      app.kubernetes.io/name: {{ include "nexus.name" . }}
       app.kubernetes.io/instance: {{ .Release.Name }}
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: {{ include "new.name" . }}
+        app.kubernetes.io/name: {{ include "nexus.name" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
     spec:
     {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
     {{- end }}
-      serviceAccountName: {{ template "new.serviceAccountName" . }}
+      serviceAccountName: {{ template "nexus.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          image: "{{ .Values.image.repository }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          env:
+          - name: "INSTALL4J_ADD_VM_PARAMS"
+            value: "-Xms1200M -Xmx1200M -XX:MaxDirectMemorySize=2G -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap"
+          volumeMounts:
+          - name: nexus-pvc
+            mountPath: "/nexus-data"
           ports:
-            - name: http
-              containerPort: 80
+            - name: docker
+              containerPort: {{ .Values.service.targetportdocker }}
               protocol: TCP
-          livenessProbe:
-            httpGet:
-              path: /
-              port: http
-          readinessProbe:
-            httpGet:
-              path: /
-              port: http
+            - name: nexus
+              containerPort: {{ .Values.service.targetportnexus }}
+              protocol: TCP
+          # livenessProbe:
+          #   httpGet:
+          #     path: /
+          #     port: http
+          # readinessProbe:
+          #   httpGet:
+          #     path: /
+          #     port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
@@ -55,3 +64,7 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
     {{- end }}
+      volumes:
+      - name: "nexus-pvc"
+        persistentVolumeClaim:
+          claimName: "nexus-pvc"
