--- a/charts/nexus-old/templates/serviceaccount.yaml
+++ b/charts/nexus-old/templates/serviceaccount.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ template "new.serviceAccountName" . }}
+  name: {{ template "nexus.serviceAccountName" . }}
   labels:
-{{ include "new.labels" . | indent 4 }}
+{{ include "nexus.labels" . | indent 4 }}
 {{- end -}}
