--- a/charts/nexus-old/templates/tests/test-connection.yaml
+++ b/charts/nexus-old/templates/tests/test-connection.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "new.fullname" . }}-test-connection"
+  name: "{{ include "nexus.fullname" . }}-test-connection"
   labels:
-{{ include "new.labels" . | indent 4 }}
+{{ include "nexus.labels" . | indent 4 }}
   annotations:
     "helm.sh/hook": test-success
 spec:
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args:  ['{{ include "new.fullname" . }}:{{ .Values.service.port }}']
+      args:  ['{{ include "nexus.fullname" . }}:{{ .Values.service.port }}']
   restartPolicy: Never
