--- a/charts/nexus-old/values.yaml
+++ b/charts/nexus-old/values.yaml
@@ -1,12 +1,11 @@
-# Default values for new.
+# Default values for nexus.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
 
 image:
-  repository: nginx
-  tag: stable
+  repository: fsadykov/docker-nexus
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
@@ -15,7 +14,7 @@ fullnameOverride: ""
 
 serviceAccount:
   # Specifies whether a service account should be created
-  create: true
+  create: false
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
   name:
@@ -33,22 +32,31 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 80
+  portdocker: ${repo_port}
+  targetportdocker: 8085
+  portnexus: ${nexus_port}
+  targetportnexus: 8081
 
 ingress:
-  enabled: false
-  annotations: {}
-    cert-manager.io/cluster-issuer: letsencrypt-prod
+  enabled: true
+  annotations:
     kubernetes.io/ingress.class: nginx
+    cert-manager.io/cluster-issuer: letsencrypt-prod
+    # kubernetes.io/tls-acme: "true"
+  # labels: {}
+  # path: /
   hosts:
-    - host: chart-example.local
-      paths:
-      
-
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+  - ${deployment_endpoint}
+  ## Extra paths to prepend to every host configuration. This is useful when working with annotation based services.
+  extraPaths: []
+  # - path: /*
+  #   backend:
+  #     serviceName: ssl-redirect
+  #     servicePort: use-annotation
+  tls:
+   - secretName: nexus-tls
+     hosts:
+     - ${deployment_endpoint}
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
