--- a/charts/nexus/values.yaml
+++ b/charts/nexus/values.yaml
@@ -14,7 +14,7 @@ fullnameOverride: ""
 
 serviceAccount:
   # Specifies whether a service account should be created
-  create: false
+  create: true
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
   name:
@@ -32,31 +32,21 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  portdocker: ${repo_port}
-  targetportdocker: 8085
-  portnexus: ${nexus_port}
-  targetportnexus: 8081
+  port: 8083  #${nexus_port}
 
 ingress:
   enabled: true
-  annotations:
+  annotations: 
     kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: letsencrypt-prod
-    # kubernetes.io/tls-acme: "true"
-  # labels: {}
-  # path: /
   hosts:
-  - ${deployment_endpoint}
-  ## Extra paths to prepend to every host configuration. This is useful when working with annotation based services.
-  extraPaths: []
-  # - path: /*
-  #   backend:
-  #     serviceName: ssl-redirect
-  #     servicePort: use-annotation
+    - host: nexusnew.gcp.huseyinakten.net
+      paths: []
+
   tls:
    - secretName: nexus-tls
      hosts:
-     - ${deployment_endpoint}
+     - nexusnew.gcp.huseyinakten.net
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
