--- a/charts/nexus/values.yaml
+++ b/charts/nexus/values.yaml
@@ -41,7 +41,8 @@ ingress:
     cert-manager.io/cluster-issuer: letsencrypt-prod
   hosts:
     - host: nexusnew.gcp.huseyinakten.net
-      paths: /
+      paths:
+      - path: /
 
   tls:
    - secretName: nexus-tls
