--- a/charts/nexus/values.yaml
+++ b/charts/nexus/values.yaml
@@ -42,7 +42,7 @@ ingress:
   hosts:
     - host: nexusnew.gcp.huseyinakten.net
       paths:
-      - path: /
+      - path: "/"
 
   tls:
    - secretName: nexus-tls
