--- a/charts/nexus/templates/docker_ingress.yaml
+++ b/charts/nexus/templates/docker_ingress.yaml
@@ -6,7 +6,7 @@ metadata:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/proxy-body-size: 2000m
     nginx.org/client-max-body-size: 2000m
-  name: docker-ingress
+  name: docker
 spec:
   rules:
   - host: {{ .Values.docker.docker_endpoint}}
