terraform module added

--- a/charts/nexus/templates/docker_ingress.yaml
+++ b/charts/nexus/templates/docker_ingress.yaml
@@ -23,4 +23,4 @@ spec:
   tls:
   - hosts:
     - {{ .Values.docker.docker_endpoint}}
-    secretName: tls-docker-prod-cert
+    secretName: tls-docker-cert-new
